--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl_translation: ^0.20.1
   table_calendar: ^3.2.0
   path_provider: ^2.1.1
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
